--- a/OnlineMovieStoreDelivery/src/main/resources/application.yml
+++ b/OnlineMovieStoreDelivery/src/main/resources/application.yml
@@ -4,6 +4,15 @@ spring:
   application:
     name: "OnlineMovieStoreDelivery"
 
+  kafka:
+    consumer:
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: com.dyurekdeler.OnlineMovieStoreDelivery.serializer.KafkaModelDeserializer
+
+    producer:
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+
 eureka:
   client:
     healthcheck:
